--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {font-family: "Lato", sans-serif}
                     <li><a href="file:///C:/Users/Camille/OneDrive/Desktop/home1/home1.html">HOME</a></li>
                     <li><a href="file:///C:/Users/Camille/OneDrive/Desktop/home1/menu.html">MENU</a></li>
                     <li><a href="file:///C:/Users/CLienT/Desktop/home/ewan.html">LOCATION</a></li>
-                    <li><a href="file:///C:/Users/Camille/OneDrive/Desktop/home1/contact.html" bt>CONTACT</a></li>
+                    <li><a href="https://ryzenkyoshi.github.io/Contact" bt>CONTACT</a></li>
                 </ul>
             </div>
         </div>
