--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ body {font-family: "Lato", sans-serif}
                 <img src="logo.png" class="logo">
                 <ul>
                     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-                    <li><a href="file:///C:/Users/Camille/OneDrive/Desktop/home1/home1.html">HOME</a></li>
-                    <li><a href="file:///C:/Users/Camille/OneDrive/Desktop/home1/menu.html">MENU</a></li>
+                    <li><a href="https://ryzenkyoshi.github.io/Home">HOME</a></li>
+                    <li><a href="https://ryzenkyoshi.github.io/Menu">MENU</a></li>
                     <li><a href="file:///C:/Users/CLienT/Desktop/home/ewan.html">LOCATION</a></li>
                     <li><a href="https://ryzenkyoshi.github.io/Contact" bt>CONTACT</a></li>
                 </ul>
