--- a/index.html
+++ b/index.html
@@ -72,11 +72,8 @@ body {font-family: "Lato", sans-serif}
     <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
     <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-        <a href="https://www.facebook.com/kburgerhousehttps://www.facebook.com/kburgerhouse" class="fa fa-facebook-official w3-hover-opacity"></a>
-        <a href="#" class="fa fa-instagram w3-hover-opacity"></a>
-        <a href="#" class="fa fa-twitter w3-hover-opacity"></a>
-        <p class="w3-medium">
-            ONLY IN <a href="https://www.facebook.com/kburgerhousehttps://www.facebook.com/kburgerhouse" target="_blank">KHAY'S BURGER HOUSE</a>
+
+            ONLY IN <a href="https://www.facebook.com/kburgerhouse" target="_blank">KHAY'S BURGER HOUSE</a>
         </p>
     </footer>
     <div class="w3-black" id="tour">
